<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:icon="@android:drawable/ic_menu_manage"
                  android:title="@string/app_name">
    <PreferenceScreen
        android:icon="@android:drawable/ic_menu_info_details"
        android:summary="@string/app_version"
        android:title="@string/app_name"
        >
        <Preference
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/app_name"
            android:summary="@string/copyright_fr3ts0n"
            >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_app_mainpage"/>
        </Preference>
        <Preference
            android:icon="@android:drawable/ic_menu_info_details"
            android:summary="@string/app_version"
            android:title="@string/release_history"
            >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_app_releases"/>
        </Preference>

        <PreferenceCategory
            android:title="@string/donation">
            <Preference
                android:icon="@drawable/ic_coin"
                android:key="paypal"
                android:title="PayPal.me"
                >
                <intent
                    android:action="android.intent.action.VIEW"
                    android:data="https://PayPal.me/fr3ts0n"/>
            </Preference>
            <Preference
                android:icon="@drawable/ic_coin"
                android:key="bitcoin"
                android:title="Bitcoin"
                >
                <intent
                    android:action="android.intent.action.VIEW"
                    android:data="bitcoin:19UApzsc5eDJ5VNDNYCA1bpszPnkcpWeFP"/>
            </Preference>
        </PreferenceCategory>
    </PreferenceScreen>


</PreferenceScreen>